# MyPi

./: CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.cmake  Dockerfile.ubuntu  HiPi  Toolchain-rpi3.cmake  docker-compose.yml  hello.cpp
src/: CMakeLists.txt  build  button.cpp  hello.cpp
