cmake_minimum_required(VERSION 3.0)
project (HelloWorld)
set (WPI_PATH /wiringpi/wiringPi/wiringPi)
include_directories (include ${WPI_PATH})
find_library (WPI_LIB wiringPi HINTS ${WPI_PATH} NO_CMAKE_FIND_ROOT_PATH)
if (NOT WPI_LIB)
 message (FATAL_ERROR "wiringPi library not found")
endif()
add_executable (HiPi hello.cpp)
add_executable (Button button.cpp)
target_link_libraries(HiPi ${WPI_LIB})
target_link_libraries(Button ${WPI_LIB})